# Overture

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: auth.py  config.py  main.py
backend/src/agents/: base.py  engine.py
backend/src/agents/context/: context_manager.py
backend/src/agents/idea/: executor.py  generator.py  monitor.py  parallel_generators.py  parallel_validators.py  validator.py
backend/src/agents/knowledge/: data_curator.py  educator.py  librarian.py
backend/src/agents/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  router.py
backend/src/agents/orchestrator/: coordinator.py  idea_loop.py  portfolio_loop.py
backend/src/agents/portfolio/: constructor.py  monitor.py  rebalancer.py  risk_manager.py
backend/src/api/: websocket.py
backend/src/api/routes/: agents.py  alerts.py  auth.py  ideas.py  knowledge.py  market_data.py  portfolio.py  rl.py  seed.py  trades.py
backend/src/data/: market_data.py  pipeline.py
backend/src/data/sources/: base.py  news_rss.py  reddit.py  social.py  yahoo_finance.py
backend/src/models/: __init__.py  agent_state.py  base.py  idea.py  knowledge.py  portfolio.py  rl.py  trade.py  user.py
backend/src/rl/: __init__.py  actions.py  environment.py  replay_buffer.py  rewards.py  state.py  trainer.py
backend/src/services/: backtest.py  data_pipeline.py  knowledge_rag.py  portfolio_init.py  price_cache.py  risk.py  screening.py  source_ranking.py  validation_tools.py  valuation.py
backend/src/utils/: logging.py
(+31 files in other folders)
